--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>
             -->
 
         </activity>
@@ -101,6 +101,10 @@
         <activity
             android:name="com.cs9033.classified.UsersActivity"
             android:label="@string/title_activity_users" >
+        </activity>
+        <activity
+            android:name="com.cs9033.classified.create.JoinChatRoomUserActivity"
+            android:label="@string/title_activity_add_user" >
         </activity>
         <activity
             android:name="com.cs9033.classified.create.AddUserActivity"
